fix: fix Home content overflow

--- a/src/routes/Home/index.scss
+++ b/src/routes/Home/index.scss
@@ -1,6 +1,5 @@
 .container {
   max-width: 100%;
-  width: 1000px;
 }
 
 .item {
@@ -11,7 +10,6 @@
   overflow: hidden;
   max-height: 60px;
   max-width: 100%;
-  width: 1000px;
   line-height: 20px;
   text-overflow: ellipsis;
 }
